<resources>
    <string name="app_name">You-ID</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="agreeString">I agree to the Terms of Services and Privacy Policy.</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account">Have an Account? Sign In</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_code">Enter Code</string>
    <string name="send_recovery_code">Send Recovery Code</string>
    <string name="return_to_login">Return to Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="example_email_com">example@email.com</string>
    <string name="pass_field">******</string>
    <string name="sign_in2">Sign In</string>
    <string name="enter_password">Enter Password</string>
    <string name="you_id_logo">You-ID Logo</string>
    <string name="hi_there_nice_to_see_you_again">Hi there! Nice to see you again.</string>
    <string name="title_activity_upload_retrieve_files">UploadRetrieveFiles</string>
    <string name="upload">Upload</string>
    <string name="retrieve">Retrieve</string>
    <string name="you_are_currently_logged_in_as">You are currently logged in as</string>
    <string name="first_name_last_name">First Name Last Name</string>
    <string name="documentation">Documentation</string>
    <string name="go_upload_test">Go Upload Test</string>
    <string name="cancel_all">Cancel All</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="upload_file">Upload File</string>
    <string name="upload_file_in_background">Upload File in background</string>
    <string name="upload_image">Upload Image</string>
    <string name="pause_all">Pause All</string>
    <string name="download_in_background">Download in Background</string>
    <string name="download">Download</string>
    <string name="manage_download">Manage Download</string>
    <string name="manage_upload">Manage Upload</string>
    <string name="refreshing">Refreshing</string>
    <string name="channel_name">Transfer Service Channel</string>
    <string name="notification_title">Transfer Service Notification</string>
    <string name="notification_text">Transfer Service is running</string>
    <string name="image_from_s3">Image from S3</string>
    <string name="select_image">Select Image</string>
    <string name="retrieve_document">Retrieve Document</string>
    <string name="upload_document">Upload Document</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">name</string>
    <string name="test">Test</string>
    <string name="login">Login</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm">Confirm</string>
    <string name="submit">Submit</string>
    <string name="enter_new_password">Enter New Password</string>


    <string name="profession">Profession</string>
    <string name="address">Address</string>
    <string name="add_contact">Add Contact</string>

    <string name="health_documents">Health Document</string>
    <string name="edit"> Edit </string>
    <string name="records">records</string>
    <string name="contacts">contacts</string>
    <string name="add"> add </string>
    <string name="full_name">Full Name</string>
    <string name="travel">Travel</string>
    <string name="health">Health</string>
    <string name="merchant">Merchant</string>
    <string name="legal">Legal</string>
    <string name="manage_user_settings">Manage User Settings</string>
    <string name="move_to_other_upload">Move to Other Upload</string>
    <string name="enter_pass">Enter Pass:</string>
    <string name="string_enter_new_password">Enter New Password</string>
    <string name="contact_name">[Contact Name]</string>
    <string name="contact_profession">[Contact Profession]</string>
    <string name="contactsUpper">Contacts List</string>
    <string name="AddUpper">Add</string>
    <string name="recordsUpper">Records</string>
    <string name="display_contact_profession">[Display Contact Profession]</string>
    <string name="display_contact_email">[Display Contact Email]</string>
    <string name="display_contact_address">[Display Contact Address]</string>
    <string name="display_contact_name">[Display Contact Name]</string>
    <string name="display_contact_phone">[Display Contact Phone]</string>
    <string name="contact_information">Contact Information</string>
    <string name="return_to_previous_page">Return to previous page</string>
    <string name="update">Update</string>
    <string name="update_contact">Update Contact</string>
    <string name="return_to_main">Return to Main</string>
    <string name="return_to_main_with_arrow"><![CDATA[<< Return to Main]]></string>
    <string name="travel_documents">Travel Documents</string>
    <string name="legal_documents">Legal Documents</string>
    <string name="merchant_documents">Merchant Documents</string>
    <string name="have_questions">Have Questions?</string>
    <string name="learn_more">Learn More</string>
    <string name="having_trouble">Having Trouble?</string>
    <string name="update_image">Update Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="select_new_profile_image">Select New Profile Image</string>
    <string name="delete_profile_image">Delete Profile Image</string>
    <string name="upload_a_new_profile_picture">Upload a New Profile Picture</string>
    <string name="change_password">Change Password</string>
    <string name="return_to_user_settings">Return to User Settings</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_email">Change Email</string>
    <string name="current_email">Current Email</string>
    <string name="new_email">New Email</string>
    <string name="current_email_2">[Current Email]</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify_code">Verify Code</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
    <string name="your_account_may_not_be_verified">Your account may not be verified.</string>
    <string name="already_have_a_verification_code">Already Have a Verification Code?</string>
    <string name="change_user_information">Change User Information</string>
    <string name="enable_2fa">Enable 2FA</string>
    <string name="authentication">Authentication</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="or">OR</string>
    <string name="sign_in_with_fingerprint">Sign In With Fingerprint</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="nav_header_title" />
    <string name="nav_header_subtitle" />
    <string name="nav_header_desc" />
    <string name="support">Support</string>
    <string name="other">Other</string>
    <string name="enter_image_name_here">Enter Image Name Here</string>
    <string name="view_image_list">View Image List</string>
    <string name="go_to_image_list">Go To Image List</string>
    <string name="download_files">Download Files</string>
    <string name="retrieve_files">Retrieve Files</string>
    <string name="uploaded_image">Uploaded Image</string>
    <string name="home">Home</string>
    <string name="retrieve_images">Retrieve Images</string>
    <string name="download_all">Download All</string>
    <string name="rename">Rename</string>
    <string name="upload_new">Upload New</string>
    <string name="current_picture">Current Picture</string>
    <string name="picture_name">Picture Name</string>
    <string name="i_c_e">I.C.E</string>
    <string name="there_is_no_document">There is no document</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="insurance_information">Insurance Information</string>
    <string name="press_and_hold_to_add_contact">Press and hold to add contact</string>
    <string name="medical_documentation">Medical Documentation</string>
    <string name="contact_1">Contact 1</string>
    <string name="contact_2">Contact 2</string>
    <string name="contact_3">Contact 3</string>
    <string name="go_to_medical_documentation">Go to Medical Documentation</string>
    <string name="go_to_insurance_information">Go to Insurance Information</string>
    <string name="emergency">Emergency</string>
    <string name="title">Title</string>
    <string name="contact_image">Contact Image</string>
    <string name="display_contact_title">[Display Contact Title]</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="upload_new_picture">Upload New Picture</string>
    <string name="change_picture">Change Picture</string>
    <string name="i_c_e_documents">I.C.E Documents</string>
    <string name="enter_confirmation_code">Enter Confirmation Code</string>
    <string name="fingerprint_login">Fingerprint Login</string>
    <string name="you_are_signed_in_as">You are signed in as</string>
    <string name="signed_in_email">Signed in Email</string>
    <string name="user_settings">User Settings</string>
    <string name="identification">Identification</string>
    <string name="identification_upload_msg">Image name is set as \'Identification\' and will be saved as a Merchant document</string>
    <string name="upload_identification">Upload Identification</string>
    <string name="enter_recovery_email">Enter Recovery Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="skip">Skip</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="change_user_info">Change User Info</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="enter_new_email">Enter New Email</string>
    <string name="change_email_string">Your current email is: [Email]</string>
    <string name="current_email_b">[Current Email]</string>
    <string name="your_current_email_is">Your current email is:</string>
</resources>