<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayoutUpload"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Upload">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/return_to_previous_page"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/upload_images"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/uploaded_image" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="5dp"
        android:padding="10dp">


        <RadioGroup
            android:id="@+id/radiogroupbuttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/radioButtonTravel"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:buttonTint="#4E91B7"
                android:paddingStart="5dp"
                android:text="@string/travel"
                tools:ignore="RtlSymmetry,TouchTargetSizeCheck,TextContrastCheck" />

            <RadioButton
                android:id="@+id/radioButtonHealth"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:buttonTint="#4E91B7"
                android:paddingStart="5dp"
                android:text="@string/health"
                tools:ignore="RtlSymmetry,TouchTargetSizeCheck,TextContrastCheck" />

            <RadioButton
                android:id="@+id/radioButtonLegal"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:buttonTint="#4E91B7"
                android:paddingStart="5dp"
                android:text="@string/legal"
                tools:ignore="RtlSymmetry,TouchTargetSizeCheck,TextContrastCheck" />

            <RadioButton
                android:id="@+id/radioButtonMerchant"
                android:layout_width="107dp"
                android:layout_height="match_parent"
                android:buttonTint="#4E91B7"
                android:paddingStart="5dp"
                android:text="@string/merchant"
                tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />
        </RadioGroup>
    </TableRow>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/imageNameInput"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/enter_image_name_here"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry,TextContrastCheck"
        android:autofillHints="Image Name" />

    <Button

        android:id="@+id/btn_imageUpload"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="#4E91B7"
        android:text="@string/upload_image"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_gotoImageList"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#4E91B7"
        android:text="@string/view_image_list"
        tools:ignore="TextContrastCheck" />

    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_upload"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu" >
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>