<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".IceAddContacts">

    <EditText
        android:id="@+id/editTextContactFirstName"
        android:layout_width="213dp"
        android:layout_height="59dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextContactLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck"
        android:autofillHints="First Name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextContactLastName"
        android:layout_width="211dp"
        android:layout_height="54dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="Last Name"
        android:ems="10"
        android:hint="@string/last_name"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextContactAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextContactEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints="E-mail"
        android:ems="10"
        android:hint="@string/e_mail"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextContactPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextContactPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubmitContactInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck"
        android:autofillHints="Phone Number" />

    <EditText
        android:id="@+id/editTextContactAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints="Address"
        android:ems="10"
        android:hint="@string/address"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextContactEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck"
        android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/textViewAddContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_contact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSubmitContactInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/submit"
        android:backgroundTint="#4E91B7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/IV_contactImage"
        android:layout_width="168dp"
        android:layout_height="146dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/upload_images"
        app:layout_constraintBottom_toTopOf="@+id/contactTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddContact"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/contact_image" />

    <EditText
        android:id="@+id/contactTitle"
        android:layout_width="213dp"
        android:layout_height="59dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/editTextContactFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="Title" />

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/return_to_previous_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>